[package]
name = "disk_reserve"
version = "0.1.0"
edition = "2024"
authors = ["AGMBK"]
license = "MIT"
readme = "README.md"

[dependencies]
sysinfo = "0.38.0"
tokio = { version = "1.49.0", default-features = false, features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.49.0", default-features = false, features = ["macros", "test-util"] }
